--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NODE_URL=test-node.zetrix.com
+ZTX_ADDRESS=ZTX3QCcugyyMMpn9iXmkBbkLyip5HSaiqrjsS
+PRIVATE_KEY=privBwvertKepm1su9fUVUurSDCUvNcKtm5Csah8iYQfrXV1mdJVvMMB
